--- a/src/main/resources/de/tsystems/mms/apm/performancesignature/Messages.properties
+++ b/src/main/resources/de/tsystems/mms/apm/performancesignature/Messages.properties
@@ -14,65 +14,65 @@
 # limitations under the License.
 #
 
-PerfSigRecorder.DisplayName=publish Performance Signature Reports
+PerfSigRecorder.DisplayName=publish Performance Signature reports
 PerfSigRecorder.GettingPDFReport=getting PDF report\:
 PerfSigRecorder.LastSuccessfulBuild=last successful build\:
-PerfSigRecorder.MissingTestCases=missing Test Case Configuration
-PerfSigRecorder.ParseXMLReport=parsing XML Report
+PerfSigRecorder.MissingTestCases=missing test case configuration
+PerfSigRecorder.ParseXMLReport=parsing XML report
 PerfSigRecorder.ReportDirectory=report directory\:
 PerfSigRecorder.RetryCountNotValid=the retry count value is not valid
-PerfSigRecorder.SessionDownloadError=failed to download Dynatrace Session, build status set to failed
-PerfSigRecorder.SessionDownloadSuccessful=Session successfully downloaded
-PerfSigRecorder.SessionNotAvailable=Session %s is not available, cannot proceed with this build step\!
-PerfSigRecorder.SingleReportError=failed to download Dynatrace Single Report, build status set to failed
-PerfSigRecorder.SleepingDelay=Sleeping for the configured delay of
+PerfSigRecorder.SessionDownloadError=failed to download Dynatrace session, build status set to failed
+PerfSigRecorder.SessionDownloadSuccessful=session successfully downloaded
+PerfSigRecorder.SessionNotAvailable=session %s is not available, cannot proceed with this build step\!
+PerfSigRecorder.SingleReportError=failed to download Dynatrace single report, build status set to failed
+PerfSigRecorder.SleepingDelay=sleeping for the configured delay of
 PerfSigRecorder.TestCaseValidationError=TestCase can not be validated
-PerfSigRecorder.VerifyDTConnection=Verifying connection to Dynatrace Server REST interface ...
-PerfSigRecorder.WaitingForSession=Waiting for 10 more seconds to get the Dynatrace session ... %d try out of %d
-PerfSigRecorder.XMLReportError=failed to download Dynatrace XML Report, build status set to failed
+PerfSigRecorder.VerifyDTConnection=verifying connection to Dynatrace server REST interface ...
+PerfSigRecorder.WaitingForSession=waiting for 10 more seconds to get the Dynatrace session ... %d try out of %d
+PerfSigRecorder.XMLReportError=failed to download Dynatrace XML report, build status set to failed
 PerfSigRecorder.XMLReportResults=got results for %s tests, type of test\: %s
-PerfSigStartRecording.DisplayName=Start Dynatrace Session recording
-PerfSigStartRecording.SessionRecordingError=Failed to start Dynatrace Session recording on %s
-PerfSigStartRecording.StartedSessionRecording=Started recording on %s with SessionName %s
-PerfSigStartRecording.StartedTestRun=Started TestRun on %s with TestRunID %s
-PerfSigStopRecording.DisplayName=Stop Dynatrace Session recording
+PerfSigStartRecording.DisplayName=start Dynatrace session recording
+PerfSigStartRecording.SessionRecordingError=failed to start Dynatrace session recording on %s
+PerfSigStartRecording.StartedSessionRecording=started recording on %s with SessionName %s
+PerfSigStartRecording.StartedTestRun=started TestRun on %s with TestRunID %s
+PerfSigStopRecording.DisplayName=stop Dynatrace session recording
 PerfSigStopRecording.InternalError=internal error, received sessionname empty
 PerfSigStopRecording.StopSessionRecording=stopping session recording ...
-PerfSigThreadDump.AgentNotConnected=Agent %s not connected
-PerfSigThreadDump.AgentNotValid=Agent Name not valid\!
-PerfSigThreadDump.DisplayName=create Thread Dump
-PerfSigThreadDump.SuccessfullyCreatedThreadDump=Successfully created Thread Dump on
+PerfSigThreadDump.AgentNotConnected=agent %s not connected
+PerfSigThreadDump.AgentNotValid=agent name not valid\!
+PerfSigThreadDump.DisplayName=create thread dump
+PerfSigThreadDump.SuccessfullyCreatedThreadDump=successfully created thread dump on
 PerfSigActivateConfiguration.ActivatingProfileConfiguration=activating profile configuration ...
 PerfSigActivateConfiguration.ConfigurationNotValid=configuration name is not valid
 PerfSigActivateConfiguration.DisplayName=activate Dynatrace profile configuration
-PerfSigActivateConfiguration.FailureActivation=Failed to activate profile configuration
+PerfSigActivateConfiguration.FailureActivation=failed to activate profile configuration
 PerfSigActivateConfiguration.HotSensorPlacementDone=HotSensorPlacement done on
 PerfSigActivateConfiguration.InternalError=could not activate configuration
 PerfSigActivateConfiguration.SuccessfullyActivated=activated configuration successfully on
 PerfSigBuildAction.DisplayName=Performance Signature
 PerfSigBaseAction.UrlName=performance-signature
 PerfSigBuildActionResultsDisplay.DefaultColor=\#FF5555
-PerfSigBuildActionResultsDisplay.DisplayName=Performance Signature Results
+PerfSigBuildActionResultsDisplay.DisplayName=Performance Signature results
 PerfSigBuildActionResultsDisplay.Percentile=Percentile
 PerfSigBuildActionResultsDisplay.ReqParamChartDashlet=chartdashlet
 PerfSigBuildActionResultsDisplay.ReqParamColor=color
 PerfSigBuildActionResultsDisplay.ReqParamMeasure=measure
 PerfSigBuildActionResultsDisplay.ReqParamTestCase=testcase
 PerfSigBuildActionResultsDisplay.ReqParamUnit=unit
-PerfSigMemoryDump.AgentNotConnected=Agent %s not connected
-PerfSigMemoryDump.AgentNotValid=Agent Name not valid\!
-PerfSigMemoryDump.DisplayName=create Memory Dump
-PerfSigMemoryDump.SuccessfullyCreatedMemoryDump=Successfully created Memory Dump on %s
+PerfSigMemoryDump.AgentNotConnected=agent %s not connected
+PerfSigMemoryDump.AgentNotValid=agent Name not valid\!
+PerfSigMemoryDump.DisplayName=create memory dump
+PerfSigMemoryDump.SuccessfullyCreatedMemoryDump=successfully created memory dump on %s
 PerfSigProjectAction.ReqParamMeasure=measure
 PerfSigProjectAction.DefaultColor=\#FF5555
-PerfSigRecorder.ComparisonNotPossible=Session %s is not available, no Comparison possible\!
-PerfSigRecorder.ComparisonReportError=failed to download Dynatrace Comparison Report, build status set to failure
+PerfSigRecorder.ComparisonNotPossible=session %s is not available, no comparison possible\!
+PerfSigRecorder.ComparisonReportError=failed to download Dynatrace comparison report, build status set to failure
 PerfSigRecorder.DTProfileNotValid=Dynatrace profile cannot be empty
-PerfSigRecorder.TestConnectionNotSuccessful=Connection with Dynatrace RESTful interface could not be established
-PerfSigRecorder.ConnectionSuccessful=Connection successful, getting reports for this build and testcase %s
-PerfSigRecorder.DTConnectionError=Connection to Dynatrace Server REST interface unsuccessful, cannot proceed with this build step
+PerfSigRecorder.TestConnectionNotSuccessful=connection with Dynatrace REST interface could not be established
+PerfSigRecorder.ConnectionSuccessful=connection successful, getting reports for this build and testcase %s
+PerfSigRecorder.DTConnectionError=connection to Dynatrace server REST interface unsuccessful, cannot proceed with this build step
 PerfSigRecorder.DelayNotValid=the delay value is not valid
-PerfSigRecorder.DTHostNotValid=Dynatrace Server Host is not valid
-PerfSigRecorder.DTPortNotValid=Dynatrace Server Port is not valid
-PerfSigRecorder.DTUserEmpty=Username for REST interface cannot be empty
-PerfSigRecorder.TestConnectionSuccessful=Connection successful
+PerfSigRecorder.DTHostNotValid=Dynatrace server host is not valid
+PerfSigRecorder.DTPortNotValid=Dynatrace server port is not valid
+PerfSigRecorder.DTUserEmpty=username for REST interface cannot be empty
+PerfSigRecorder.TestConnectionSuccessful=connection successful
