partly revert ba88623338dd131965715ee912727b054a71cd16

--- a/src/main/resources/de/tsystems/mms/apm/performancesignature/Messages.properties
+++ b/src/main/resources/de/tsystems/mms/apm/performancesignature/Messages.properties
@@ -13,8 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
-PerfSigRecorder.DisplayName=publish Performance Signature reports
+PerfSigRecorder.DisplayName=Publish Performance Signature reports
 PerfSigRecorder.GettingPDFReport=getting PDF report\:
 PerfSigRecorder.LastSuccessfulBuild=last successful build\:
 PerfSigRecorder.MissingTestCases=missing test case configuration
@@ -31,11 +30,11 @@ PerfSigRecorder.VerifyDTConnection=verifying connection to Dynatrace server REST
 PerfSigRecorder.WaitingForSession=waiting for 10 more seconds to get the Dynatrace session ... %d try out of %d
 PerfSigRecorder.XMLReportError=failed to download Dynatrace XML report, build status set to failed
 PerfSigRecorder.XMLReportResults=got results for %s tests, type of test\: %s
-PerfSigStartRecording.DisplayName=start Dynatrace session recording
+PerfSigStartRecording.DisplayName=Start Dynatrace session recording
 PerfSigStartRecording.SessionRecordingError=failed to start Dynatrace session recording on %s
 PerfSigStartRecording.StartedSessionRecording=started recording on %s with SessionName %s
 PerfSigStartRecording.StartedTestRun=started TestRun on %s with TestRunID %s
-PerfSigStopRecording.DisplayName=stop Dynatrace session recording
+PerfSigStopRecording.DisplayName=Stop Dynatrace session recording
 PerfSigStopRecording.InternalError=internal error, received sessionname empty
 PerfSigStopRecording.StopSessionRecording=stopping session recording ...
 PerfSigThreadDump.AgentNotConnected=agent %s not connected
